Fix bug in workflow again.

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -55,11 +55,12 @@ jobs:
         run: |
           hugo \
             --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/sglab"
+            --baseURL "${{ steps.pages.outputs.base_url }}/"
+        working-directory: ./sglab
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./public
+          path: ./sglab/public
 
   # Deployment job
   deploy:
