Add mock content

--- a/sglab/hugo.toml
+++ b/sglab/hugo.toml
@@ -1,7 +1,6 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
-theme = 'ananke'
+title = 'SG Lab'
 
 [caches]
   [caches.images]
